--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <html>
  <head>
-  <title> blog things </title>
+   <title> blog things </title>
  </head>
  <body>
-  <nav>
-   <ul> <!-- I'm a list (and a comment)-->
-    <li><a href="#">Home</a></li>
-   </ul>
-  </nav>
-  <footer>
-   <p> This is my webpage! @liz-tkd11</p>
-  </footer>
+   <nav>
+     <ul> <!-- I'm a list (and a comment) -->
+      <li><a href="#">Home</a></li>
+     </ul>
+   </nav>
+   <footer>
+     <p>This is my webpage! @liz_tkd11</p>
+   </footer>
  </body>
-</html>
-  
+</htm>
