--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
  <body>
    <nav>
      <ul> <!-- I'm a list (and a comment) -->
-      <li><a href="#">Home</a></li>
+      <li><a href="#">Welsh/Quarter mix
+       Hunter/jumper and dressage
+       10 years old
+      </a></li>
      </ul>
    </nav>
    <footer>
-     <p>This is my webpage! @liz_tkd11</p>
+     <p> I live at Hidden K stables, loved by @liz_tkd11</p>
    </footer>
  </body>
 </htm>
