--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <html>
  <head>
-   <title> Prince of Wales </title>
+   <title> A drop of sunshine </title>
  </head>
  <body>
    <nav>
      <ul> <!-- I'm a list (and a comment) -->
-      <li><a href="#">Welsh/Quarter mix
-       Hunter/jumper and dressage
-       10 years old
+      <li><a href="#"> After every Dark night there is a sunrise, full of color. All you have to do is sleep through the night.
       </a></li>
      </ul>
    </nav>
    <footer>
-     <p> I live at Hidden K stables, loved by @liz_tkd11</p>
+     <p> Never stop believing </p>
    </footer>
  </body>
 </htm>
