--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
  <body>
    <nav>
      <ul> <!-- I'm a list (and a comment) -->
-      <li><a href="#"> After every Dark night there is a sunrise, full of color. All you have to do is sleep through the night.
+      <li><a href="#"> Haha, so I tried.
       </a></li>
      </ul>
    </nav>
    <footer>
-     <p> Never stop believing </p>
+     <p> I've figured out this only loads in internet explorer, I don't know why. All i can basically do is this text, but i've figured out how this works to a point. </p>
    </footer>
  </body>
 </htm>
