--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      </ul>
    </nav>
    <footer>
-     <p> I've figured out this only loads in internet explorer, I don't know why. All i can basically do is this text, but i've figured out how this works to a point. </p>
+     <p> All I can basically do is this text, but I've figured out how this works to a point. I can't do any display as of right now but what do you think?</p>
    </footer>
  </body>
 </htm>
