--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
- <head>
+ <head>'UTF-8>
+ <meta charset=
    <title> Pearl Hacks Project </title>
  </head>
  <body>
@@ -11,6 +12,7 @@
    </nav>
    <footer>
      <p> All I can basically do is this text, but I've figured out how this works to a point. I can't do any display as of right now but what do you think?</p>
+     <p> I'm generally figuring this out, and I don't know if it can load outside of explorer because it load about 50/50 </p>
    </footer>
  </body>
 </htm>
