--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
- <head>'UTF-8>
- <meta charset=
+ <head>
+ <meta charset="UTF-8">
    <title> Pearl Hacks Project </title>
  </head>
  <body>
