--- a/index.html
+++ b/index.html
@@ -15,4 +15,10 @@
      <p> I'm generally figuring this out, and I don't know if it can load outside of explorer because it load about 50/50 </p>
    </footer>
  </body>
+ <h1>A very large heading</h1>
+<h2>A smaller heading</h2>
+<h3>Smaller heading still</h3>
+<p>A paragraph</p>
+<a href="http://www.twitter.com">A link to twitter</a>
+<img alt="Google" src="http://www.google.com/images/srpr/logo11w.png"/>
 </htm>
