--- a/index.html
+++ b/index.html
@@ -3,22 +3,11 @@
  <meta charset="UTF-8">
    <title> Pearl Hacks Project </title>
  </head>
- <body>
-   <nav>
-     <ul> <!-- I'm a list (and a comment) -->
-      <li><a href="#"> Haha, so I tried.
-      </a></li>
-     </ul>
-   </nav>
-   <footer>
-     <p> All I can basically do is this text, but I've figured out how this works to a point. I can't do any display as of right now but what do you think?</p>
-     <p> I'm generally figuring this out, and I don't know if it can load outside of explorer because it load about 50/50 </p>
-   </footer>
- </body>
- <h1>A very large heading</h1>
-<h2>A smaller heading</h2>
-<h3>Smaller heading still</h3>
-<p>A paragraph</p>
-<a href="http://www.twitter.com">A link to twitter</a>
+ <h1>Haha here we go,</h1>
+<h2>This is doing alright, I still have no idea what im doing... I'm just messing around with stuff.</h2>
+<h3>The layout for this coding is literally copy and pasted from a powerpoint, I'm just changing text.</h3>
+<h4> I'm basically just figuring out what all the different codes stand for. Haha, tiral and error.</h4>
+<p> This has been really fun, this first session was alright. The second Leiah and I came in a little late and we were completely lost. The teacher was launching straight into full coding. We decided to walk around the lobby where the sponsors fair is and now we're just chilling in the relaxation area.</p>
+<a href="http://www.pets4homes.co.uk/images/articles/834/large/should-you-put-your-horse-on-loan-51b1ee7f46767.jpg"> I don't know if this will work.</a>
 <img alt="Google" src="http://www.google.com/images/srpr/logo11w.png"/>
 </htm>
