--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <h3>The layout for this coding is literally copy and pasted from a powerpoint, I'm just changing text.</h3>
 <h4> I'm basically just figuring out what all the different codes stand for. Haha, tiral and error.</h4>
 <p> This has been really fun, this first session was alright. The second Leiah and I came in a little late and we were completely lost. The teacher was launching straight into full coding. We decided to walk around the lobby where the sponsors fair is and now we're just chilling in the relaxation area.</p>
-<a href="http://www.pets4homes.co.uk/images/articles/834/large/should-you-put-your-horse-on-loan-51b1ee7f46767.jpg"> I don't know if this will work.</a>
-<img alt="Google" src="http://www.google.com/images/srpr/logo11w.png"/>
+<a href="http://pearlhacks.com/"> PearlHacks website</a>
+<img alt="horse" src="http://www.pets4homes.co.uk/images/articles/834/large/should-you-put-your-horse-on-loan-51b1ee7f46767.jpg"/>
 </htm>
