--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
    <title> Pearl Hacks Project </title>
  </head>
  <h1>Haha here we go,</h1>
-<h2>This is doing alright, I still have no idea what im doing... I'm just messing around with stuff.</h2>
-<h3>The layout for this coding is literally copy and pasted from a powerpoint, I'm just changing text.</h3>
-<h4> I'm basically just figuring out what all the different codes stand for. Haha, tiral and error.</h4>
-<p> This has been really fun, this first session was alright. The second Leiah and I came in a little late and we were completely lost. The teacher was launching straight into full coding. We decided to walk around the lobby where the sponsors fair is and now we're just chilling in the relaxation area.</p>
+<h2>Liz Lyttle</h2>
+<h3>Freshman at Reagan High school</h3>
+<h4> Green-stripe at Tiger Kim's World Class Taekwondo, Team Tiger Demo</h4>
+<h4>Equestrian, Dancer, [ex]Gymnast, XC runner for Reagan 2014 season</h4>
+<h4>Guitarist, Singer</h4>
+<p> Oh hello, haha. I love what I do and I'll never stop.</p>
+<p>I am a part-time employee at Tiger Kim's Clemmons location </p>
 <a href="http://pearlhacks.com/"> PearlHacks website</a>
 <img alt="horse" src="http://www.pets4homes.co.uk/images/articles/834/large/should-you-put-your-horse-on-loan-51b1ee7f46767.jpg"/>
 </htm>
