--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 <h2>Liz Lyttle</h2>
 <h3>Freshman at Reagan High school</h3>
 <h4> Green-stripe at Tiger Kim's World Class Taekwondo, Team Tiger Demo</h4>
-<h4>Equestrian, Dancer, [ex]Gymnast, XC runner for Reagan 2014 season</h4>
-<h4>Guitarist, Singer</h4>
+<h4>Equestrian, Dancer, [ex]Gymnast, XC runner for Reagan 2014 season, Guitarist, and Singer</h4>
 <p> Oh hello, haha. I love what I do and I'll never stop.</p>
-<p>I am a part-time employee at Tiger Kim's Clemmons location </p>
-<a href="http://pearlhacks.com/"> PearlHacks website</a>
+<p>I am a part-time employee at Tiger Kim's Clemmons location, I teach Little Tiger, White-belt and Yellow-belt classes on Mondays and Wednesdays.</p>
+<p>I'm also a new member of Tiger Kim's 2015 Demo Team. This year we'll be performing at events from local to international scale.</p>
+<p> I ridden horses at Hidden "K" Stables for five years. I ride english in general but focus on Dressage.</p>
+<p>My favorite horse would be Prince of Whales. He's a bay, Welsh/Quarter mix, and stands at 10.2 hands. He's formally trained in dressage and jumps very well.</p>
+/a>ef="http://www.tigerkimstkd.com/"> Tiger Kim's World Class Taekwondo site</a>
+<a href="http://www.hiddenkstables.com/"> Hidden "K" Stables site</a>
+<a href="http://www.salemgym.com/" Salem Gymnastics site
 <img alt="horse" src="http://www.pets4homes.co.uk/images/articles/834/large/should-you-put-your-horse-on-loan-51b1ee7f46767.jpg"/>
 </htm>
