--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <p>I'm also a new member of Tiger Kim's 2015 Demo Team. This year we'll be performing at events from local to international scale.</p>
 <p> I ridden horses at Hidden "K" Stables for five years. I ride english in general but focus on Dressage.</p>
 <p>My favorite horse would be Prince of Whales. He's a bay, Welsh/Quarter mix, and stands at 10.2 hands. He's formally trained in dressage and jumps very well.</p>
-/a>ef="http://www.tigerkimstkd.com/"> Tiger Kim's World Class Taekwondo site</a>
+<p> I was a gymnast at Salem Gymnastics since age four. I competed on the AAU team from level 3 to level 5.</p>
+<a href="tigerkimstkd.com"> Tiger Kim's World Class Taekwondo site</a>
 <a href="http://www.hiddenkstables.com/"> Hidden "K" Stables site</a>
 <a href="http://www.salemgym.com/" Salem Gymnastics site
 <img alt="horse" src="http://www.pets4homes.co.uk/images/articles/834/large/should-you-put-your-horse-on-loan-51b1ee7f46767.jpg"/>
