--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@
 <p>I was a gymnast at Salem Gymnastics since age four. I comptetd in the AAU division from level 3 to level 5.</p>
 <a href="http://www.tigerkimstkd.com/"> Tiger Kim's World Class Taekwondo site</a>
 <a href="http://www.hiddenkstables.com/"> Hidden "K" Stables site</a>
-<a href="http://www.salemgym.com/" Salem Gymnastics site</a>
+<a href="http://www.salemgym.com/"> Salem Gymnastics site</a>
 </htm>
