--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
  <head>
  <meta charset="UTF-8">
-   <title> Pearl Hacks Project </title>
+   <title> Liz M. Lyttle Bio </title>
  </head>
- <h1>Haha here we go,</h1>
+ <h1>Haha, here we go...</h1>
 <h2>Liz Lyttle</h2>
 <h3>Freshman at Reagan High school</h3>
 <h4> Green-stripe at Tiger Kim's World Class Taekwondo, Team Tiger Demo</h4>
