--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h2>Liz Lyttle</h2>
 <h3>Freshman at Ronald Reagan High school</h3>
 <h3> </h3>
-<h3>Green-stripe at Tiger Kim's World Class Taekwondo, Team Tiger Demo, Equestrian, Dancer, [ex]Gymnast, XC runner for Reagan 2014 season, Guitarist, and Singer</h3>
+<h3>Green-stripe at Tiger Kim's World Class Taekwondo, Team Tiger Demo, Equestrian, Dancer, [ex]Gymnast, XC runner, Guitarist, and Singer</h3>
 <p> </p>
 <h4> Oh hello, haha. I love what I do and I'll never stop.</h4>
 <img alt="Tiger Kim's" src="http://www.k12academics.com/sites/default/files/AAA_TigerLogo%20copy.jpg"/>
