--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p>I ran on Reagan's cross country team for the 2014 season. This was my first experience with "professional" running and I completed the season with a 5k time of 30:39</p>
 <p>I've played guitar for three years and have both an electric and an acoustic.</p>
 <p> </p>
-<h3>I am an /B honor role student and I am very interested in the STEM career field.</h3>
+<h4>I am an A/B honor role student and I'm interested in the STEM career field.</h4>
 <p>I have three colleges in mind, UNC at Chapel Hill, North Carolina State, or Wake Forest University.</p>
 <p>I am most interested in either a biochem or biotech career. I hope to either be working to solve genetic diseases or t find new, clean sources and power mechanics.</p>
 <p> </p>
